@@ -1,6 +1,6 @@
 {
   "name": "simp-svckill",
-  "version": "3.3.1",
+  "version": "3.3.2",
   "author": "SIMP Team",
   "summary": "Disables all services that are not controlled by Puppet.",
   "license": "Apache-2.0",
